major changes made

--- a/Admin/Admin.html
+++ b/Admin/Admin.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="teams.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Righteous&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         </video>
     </div>
     <header>
-        <h1 class="righteous-regular">Admin Dashboard</h1>
+        <h1 class="new-amsterdam-regular" >Admin Dashboard</h1>
     </header>
 
     
@@ -70,7 +70,7 @@
                 <h3>Toppers</h3>
                 <input type="text" name="First" id="first" placeholder="Winner">
                 <input type="text" name="Second" id="second" placeholder="RunnerUp">
-                <input type="submit" id = "updateResults" value="Post">
+                <input type="submit" id = "updateResults" style="background-color: #0aa989; margin-top:30px;" value="Post">
             </div>
         </div>
 
